# Flexpad

./: README.md  build.gradle  gradle.properties  local.properties  settings.gradle
app/: build.gradle  google-services.json
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cpp_code.cpp
app/src/main/res/drawable/: background_left.xml  background_right.xml  black_duolingable.xml  create_room_foreground.xml  delete_forever_foreground.xml  duolingable.xml  ic_baseline_account_box.xml  ic_baseline_mic.xml  ic_baseline_mic_none.xml  ic_baseline_mic_off.xml  ic_beenhere.xml  ic_done_all_foreground.xml  ic_mic_foreground.xml  ic_mic_none_foreground.xml  ic_mic_off_foreground.xml  ic_pause_rr_foreground.xml  ic_play_ll.xml  ic_play_right_foreground.xml  ic_play_rr.xml  ic_recording_foreground.xml  ic_stop_2.xml  ic_stop_ll.xml  ic_stop_rr.xml  icon_check_verified_foreground.xml  icon_send_foreground.xml  invite_person.xml  orange_duolingable.xml  red_duolingable.xml  ripple_effect.xml  ripple_effect_ash.xml  ripple_effect_white_ish.xml  welcome.xml  white_duolingable.xml  white_upside_duolingable.xml
app/src/main/res/drawable-v24/: welcome_drawable.xml
app/src/main/res/layout/: activity_contacts.xml  activity_fact_or_fake.xml  activity_feedback.xml  activity_games.xml  activity_login.xml  activity_main.xml  activity_message.xml  activity_payment.xml  activity_quiz.xml  activity_register.xml  activity_reset_password.xml  (+25 more)
gradle/wrapper/: gradle-wrapper.properties
oboe-1.4.3/: build.gradle  oboe-1.4.3.aar
(+84 files in other folders)
